--- a/.gitignore
+++ b/.gitignore
@@ -431,3 +431,4 @@ MigrationBackup/
 .ionide/
 
 # End of https://www.toptal.com/developers/gitignore/api/vscode,cmake,c++,visualstudio,visualstudiocode
+/build
